# disaster-tweet-classification

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  Reading Doc.ipynb  TODO.md  beginner_nlp_starter.ipynb  clean.py  disaster_tweets_nlp.ipynb  keras_nlp_starter.ipynb  pyproject.toml  requirements.txt  research_doc.ipynb  setup.py  test_api_simple.py
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
Data/: submission.csv  test_cleaned.csv  test_enhanced.csv  test_with_meta.csv  train_cleaned.csv  train_enhanced.csv  train_with_meta.csv
config/: hyperparameters.json
deploy/: requirements_deploy.txt  simple_deploy.py
models/: README.md  meta_feature_scaler.pkl
models/distilbert_classifier/: .gitkeep
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_text_preprocessing.ipynb  04_model_training.ipynb  05_evaluation_prediction.ipynb  README.md
results/metrics/: data_summary.csv
specs/001-deploy-the-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/api/: batch_classify.py  classify.py  health.py  main.py  streaming.py  streamlit_app.py  x_api_client.py
src/inference/: batch_processor.py  predictor.py
src/models/: classification_result.py  disaster_classifier.py  processed_tweet.py  tweet.py
src/preprocessing/: features.py  keyword_detector.py  text_cleaner.py
src/streaming/: tweet_streamer.py
src/utils/: __init__.py  cache.py  config.py  logger.py
tests/: __init__.py
(+9 files in other folders)
